# neuron-task-matching

./: .gitignore  02_diat_ablation.py  03_best_model_search.py  05_shd_bakeoff.py  CITATION.cff  LICENSE  README (3).md  README.md  __init__.py  pyproject.toml  requirements.txt  shd_disjoint_summary.json
experiments/: 01_shd_deep_probe.py  02_diat_ablation.py  03_best_model_search.py  04_best_model_search_full.py  05_shd_bakeoff.py  06_close_2x2.py  07_shd_disjoint.py
notebooks/: shd_deep_probe.ipynb
results/: cnn_frontier_summary.json  shd_disjoint_summary.json
