[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "mstask"
version = "1.1.0"
description = "Shared harness for the cross-domain double dissociation of neuron-task matching in pure spiking networks."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "İsmail Can Dikmen" },
    { name = "Teoman Karadağ" },
]
dependencies = [
    "torch>=2.0",
    "numpy>=1.23",
    "scikit-learn>=1.1",
    "h5py>=3.7",
    "matplotlib>=3.6",
    "optuna>=3.0",
    "requests>=2.28",
    "tqdm>=4.64",
    "scipy>=1.9",
    "dikmen-spiking-neurons @ git+https://github.com/DrCanD/dikmen-spiking-neurons.git",
]

[project.urls]
Repository = "https://github.com/DrCanD/neuron-task-matching"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
